doc: format table, format components

--- a/app/checkbox/@dev/page.mdx
+++ b/app/checkbox/@dev/page.mdx
@@ -4,13 +4,19 @@ import TableOfContents from '@components/doc/TableOfContents';
 
 <TableOfContents />
 
+## Basic Checkbox
+
 <CodePreview paths={['checkbox', 'BasicCheckbox']}>
   <Demo.BasicCheckbox />
 </CodePreview>
 
+## Group Checkbox
+
 <CodePreview paths={['checkbox', 'GroupCheckbox']}>
   <Demo.GroupCheckbox />
 </CodePreview>
+
+## Nested Checkbox
 
 <CodePreview paths={['checkbox', 'NestedCheckbox']}>
   <Demo.NestedCheckbox />
