--- a/app/dot/@dev/page.mdx
+++ b/app/dot/@dev/page.mdx
@@ -36,11 +36,11 @@ import TableOfContents from '@components/doc/TableOfContents';
 
 ### `<Dot />`
 
-| **Prop**         | **Type**              | **Default** | **Description**                               |
-| ---------------- | --------------------- | ----------- | --------------------------------------------- | ------- | ----- | -------- | -------- | ------ | ------ | -------- | --------- |
-| **size**         | 'xs'                  | 'sm'        | 'md'                                          | 'lg'    | 'xl'  | _'md'_   | Dot size |
-| **pulse**        | boolean               | _false_     | Pulse animation                               |
-| **color**        | 'gray'                | 'orange'    | 'violet'                                      | 'green' | 'red' | 'yellow' | 'blue'   | 'lime' | 'cyan' | _'gray'_ | Dot color |
-| **...spanProps** | HTMLSpanElement props |             | All native span props (className, style, ...) |
+| **Prop**         | **Type**                                                                                     | **Default** | **Description**                               |
+| ---------------- | -------------------------------------------------------------------------------------------- | ----------- | --------------------------------------------- |
+| **size**         | 'xs' \| 'sm' \| 'md' \| 'lg' \| 'xl'                                                         | _'md'_      | Dot size                                      |
+| **pulse**        | boolean                                                                                      | _false_     | Pulse animation                               |
+| **color**        | 'gray' \| 'orange' \| 'violet' \| 'green' \| 'red' \| 'yellow' \| 'blue' \| 'lime' \| 'cyan' | _'gray'_    | Dot color                                     |
+| **...spanProps** | HTMLSpanElement props                                                                        |             | All native span props (className, style, ...) |
 
 > **_Note:_** _Dot_ **inherits** all native props from **HTMLSpanElement**
