--- a/app/search-input/@dev/page.mdx
+++ b/app/search-input/@dev/page.mdx
@@ -248,28 +248,28 @@ import TableOfContents from '@components/doc/TableOfContents';
 
 ## Design Tokens for SearchInput
 
-| **Token**                                | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                                   |
-| ---------------------------------------- | ---------------------------- | ----------------- | --------------------------------------------------------------------- |
-| `--par-color-bg-field-enabled`           | Search input background      | Enabled           | `.par-input:enabled`                                                  |
-| `--par-color-bg-field-hovered`           | Search input background      | Hovered           | `.par-input:hover`                                                    |
-| `--par-color-bg-field-disabled`          | Search input background      | Disabled          | `.par-input:disabled`                                                 |
-| `--par-color-bg-field-readonly`          | Search input background      | Readonly          | `.par-input[readonly]`                                                |
-| `--par-color-bg-field-invalid`           | Search input background      | Invalid/Error     | `.par-input.error-state`                                              |
-| `--par-color-border-field-enabled`       | Search input border          | Enabled           | `.par-input:enabled`                                                  |
-| `--par-color-border-field-hovered`       | Search input border          | Hovered           | `.par-input:hover`                                                    |
-| `--par-color-border-field-disabled`      | Search input border          | Disabled          | `.par-input:disabled`                                                 |
-| `--par-color-border-field-invalid`       | Search input border          | Invalid/Error     | `.par-input.error-state`                                              |
-| `--par-color-border-field-focused`       | Search input border          | Focused           | `.par-input:focus`                                                    |
-| `--par-color-text-field-placeholder`     | Placeholder text             | Any               | `.par-input::placeholder`                                             |
-| `--par-color-text-field-filled`          | Search input text            | Filled            | `.par-input`                                                          |
-| `--par-color-text-field-label`           | Label text                   | Any               | `.contained-label`                                                    |
-| `--par-color-text-field-disabled`        | Search input text            | Disabled          | `.par-input:disabled`                                                 |
-| `--par-color-text-field-readonly`        | Search input text            | Readonly          | `.par-input[readonly]`                                                |
-| `--par-color-text-field-invalid`         | Search input text            | Invalid/Error     | `.par-input.error-state`                                              |
-| `--par-color-icon-field-button-enabled`  | Icon color (button enabled)  | Enabled           | `.input-icon:enabled, .clear-button:enabled, .square-icon:enabled`    |
-| `--par-color-icon-field-button-hovered`  | Icon color (button hovered)  | Hovered           | `.input-icon:hover, .clear-button:hover, .square-icon:hover`          |
-| `--par-color-icon-field-button-pressed`  | Icon color (button pressed)  | Pressed           | `.input-icon:active, .clear-button:active, .square-icon:active`       |
-| `--par-color-icon-field-button-disabled` | Icon color (button disabled) | Disabled          | `.input-icon:disabled, .clear-button:disabled, .square-icon:disabled` |
+| **Token**                                  | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                                   |
+| ------------------------------------------ | ---------------------------- | ----------------- | --------------------------------------------------------------------- |
+| **--par-color-bg-field-enabled**           | Search input background      | Enabled           | `.par-input:enabled`                                                  |
+| **--par-color-bg-field-hovered**           | Search input background      | Hovered           | `.par-input:hover`                                                    |
+| **--par-color-bg-field-disabled**          | Search input background      | Disabled          | `.par-input:disabled`                                                 |
+| **--par-color-bg-field-readonly**          | Search input background      | Readonly          | `.par-input[readonly]`                                                |
+| **--par-color-bg-field-invalid**           | Search input background      | Invalid/Error     | `.par-input.error-state`                                              |
+| **--par-color-border-field-enabled**       | Search input border          | Enabled           | `.par-input:enabled`                                                  |
+| **--par-color-border-field-hovered**       | Search input border          | Hovered           | `.par-input:hover`                                                    |
+| **--par-color-border-field-disabled**      | Search input border          | Disabled          | `.par-input:disabled`                                                 |
+| **--par-color-border-field-invalid**       | Search input border          | Invalid/Error     | `.par-input.error-state`                                              |
+| **--par-color-border-field-focused**       | Search input border          | Focused           | `.par-input:focus`                                                    |
+| **--par-color-text-field-placeholder**     | Placeholder text             | Any               | `.par-input::placeholder`                                             |
+| **--par-color-text-field-filled**          | Search input text            | Filled            | `.par-input`                                                          |
+| **--par-color-text-field-label**           | Label text                   | Any               | `.contained-label`                                                    |
+| **--par-color-text-field-disabled**        | Search input text            | Disabled          | `.par-input:disabled`                                                 |
+| **--par-color-text-field-readonly**        | Search input text            | Readonly          | `.par-input[readonly]`                                                |
+| **--par-color-text-field-invalid**         | Search input text            | Invalid/Error     | `.par-input.error-state`                                              |
+| **--par-color-icon-field-button-enabled**  | Icon color (button enabled)  | Enabled           | `.input-icon:enabled, .clear-button:enabled, .square-icon:enabled`    |
+| **--par-color-icon-field-button-hovered**  | Icon color (button hovered)  | Hovered           | `.input-icon:hover, .clear-button:hover, .square-icon:hover`          |
+| **--par-color-icon-field-button-pressed**  | Icon color (button pressed)  | Pressed           | `.input-icon:active, .clear-button:active, .square-icon:active`       |
+| **--par-color-icon-field-button-disabled** | Icon color (button disabled) | Disabled          | `.input-icon:disabled, .clear-button:disabled, .square-icon:disabled` |
 
 > _Note: SearchInput uses the same design tokens as the Input component. See Input documentation for available tokens._
 
