--- a/app/date-picker/@dev/page.mdx
+++ b/app/date-picker/@dev/page.mdx
@@ -153,43 +153,43 @@ import TableOfContents from '@components/doc/TableOfContents';
 
 ## Design Tokens for DatePicker
 
-| Token                                                   | Color for                       | State/Meaning                | CSS Selector(s)                                                                        |
-| ------------------------------------------------------- | ------------------------------- | ---------------------------- | -------------------------------------------------------------------------------------- |
-| --par-color-text-datepicker-days-today-neutral-enabled  | Day text (today, neutral)       | Today, enabled (neutral)     | .flatpickr-day.today.flatpickr-calendar-neutral                                        |
-| --par-color-text-datepicker-days-today-neutral-hovered  | Day text (today, neutral)       | Today, hovered (neutral)     | .flatpickr-day.today.flatpickr-calendar-neutral:hover                                  |
-| --par-color-text-datepicker-days-today-neutral-active   | Day text (today, neutral)       | Today, active (neutral)      | .flatpickr-day.today.flatpickr-calendar-neutral:active                                 |
-| --par-color-text-datepicker-days-today-accent-enabled   | Day text (today, accent)        | Today, enabled (accent)      | .flatpickr-day.today.flatpickr-calendar-accent                                         |
-| --par-color-text-datepicker-days-today-accent-hovered   | Day text (today, accent)        | Today, hovered (accent)      | .flatpickr-day.today.flatpickr-calendar-accent:hover                                   |
-| --par-color-text-datepicker-days-today-accent-active    | Day text (today, accent)        | Today, active (accent)       | .flatpickr-day.today.flatpickr-calendar-accent:active                                  |
-| --par-color-text-datepicker-days-normal-enabled         | Day text (normal)               | Normal, enabled              | .flatpickr-day                                                                         |
-| --par-color-text-datepicker-days-normal-neutral-hovered | Day text (normal, neutral)      | Normal, hovered (neutral)    | .flatpickr-day.flatpickr-calendar-neutral:hover                                        |
-| --par-color-text-datepicker-days-normal-accent-hovered  | Day text (normal, accent)       | Normal, hovered (accent)     | .flatpickr-day.flatpickr-calendar-accent:hover                                         |
-| --par-color-text-datepicker-days-normal-neutral-active  | Day text (normal, neutral)      | Normal, active (neutral)     | .flatpickr-day.flatpickr-calendar-neutral:active                                       |
-| --par-color-text-datepicker-days-normal-accent-active   | Day text (normal, accent)       | Normal, active (accent)      | .flatpickr-day.flatpickr-calendar-accent:active                                        |
-| --par-color-text-datepicker-days-normal-disabled        | Day text (normal)               | Disabled                     | .flatpickr-day.flatpickr-disabled, .flatpickr-day:disabled                             |
-| --par-color-text-datepicker-days-normal-drag-neutral    | Day text (drag, neutral)        | Drag selection (neutral)     | .flatpickr-day.drag.flatpickr-calendar-neutral                                         |
-| --par-color-text-datepicker-days-normal-drag-accent     | Day text (drag, accent)         | Drag selection (accent)      | .flatpickr-day.drag.flatpickr-calendar-accent                                          |
-| --par-color-text-datepicker-days-today-drag-neutral     | Day text (today, drag, neutral) | Today, drag (neutral)        | .flatpickr-day.today.drag.flatpickr-calendar-neutral                                   |
-| --par-color-text-datepicker-days-today-drag-accent      | Day text (today, drag, accent)  | Today, drag (accent)         | .flatpickr-day.today.drag.flatpickr-calendar-accent                                    |
-| --par-color-text-datepicker-time                        | Time text                       | Time picker text             | .flatpickr-time                                                                        |
-| --par-color-text-datepicker-caret-enabled               | Caret icon                      | Caret enabled                | .numInputWrapper .arrowUp:after, .numInputWrapper .arrowDown:after                     |
-| --par-color-text-datepicker-caret-hovered               | Caret icon                      | Caret hovered                | .numInputWrapper .arrowUp:hover:after, .numInputWrapper .arrowDown:hover:after         |
-| --par-color-text-datepicker-caret-disabled              | Caret icon                      | Caret disabled               | .numInputWrapper[disabled] .arrowUp:after, .numInputWrapper[disabled] .arrowDown:after |
-| --par-color-bg-datepicker-days-neutral-enabled          | Day background (neutral)        | Enabled                      | .flatpickr-day.flatpickr-calendar-neutral                                              |
-| --par-color-bg-datepicker-days-neutral-hovered          | Day background (neutral)        | Hovered                      | .flatpickr-day.flatpickr-calendar-neutral:hover                                        |
-| --par-color-bg-datepicker-days-neutral-active           | Day background (neutral)        | Active                       | .flatpickr-day.flatpickr-calendar-neutral:active                                       |
-| --par-color-bg-datepicker-days-neutral-disabled         | Day background (neutral)        | Disabled                     | .flatpickr-day.flatpickr-calendar-neutral:disabled                                     |
-| --par-color-bg-datepicker-days-accent-enabled           | Day background (accent)         | Enabled                      | .flatpickr-day.flatpickr-calendar-accent                                               |
-| --par-color-bg-datepicker-days-accent-hovered           | Day background (accent)         | Hovered                      | .flatpickr-day.flatpickr-calendar-accent:hover                                         |
-| --par-color-bg-datepicker-days-accent-active            | Day background (accent)         | Active                       | .flatpickr-day.flatpickr-calendar-accent:active                                        |
-| --par-color-bg-datepicker-days-accent-disabled          | Day background (accent)         | Disabled                     | .flatpickr-day.flatpickr-calendar-accent:disabled                                      |
-| --par-color-bg-datepicker-days-drag-neutral             | Day background (drag, neutral)  | Drag selection (neutral)     | .flatpickr-day.drag.flatpickr-calendar-neutral                                         |
-| --par-color-bg-datepicker-days-drag-accent              | Day background (drag, accent)   | Drag selection (accent)      | .flatpickr-day.drag.flatpickr-calendar-accent                                          |
-| --par-color-bg-datepicker-month-select-dropdown-enabled | Month select dropdown           | Enabled                      | .flatpickr-current-month .flatpickr-monthDropdown-months                               |
-| --par-color-bg-datepicker-month-select-dropdown-hovered | Month select dropdown           | Hovered                      | .flatpickr-current-month .flatpickr-monthDropdown-months:hover                         |
-| --par-color-bg-datepicker                               | DatePicker background           | Main background              | .date-picker                                                                           |
-| --par-color-border-datepicker                           | DatePicker border               | Main border                  | .date-picker                                                                           |
-| --par-color-border-datepicker-month-select-list         | Month select list border        | Border for month select list | .flatpickr-current-month .flatpickr-monthDropdown-month                                |
+| **Token**                                                   | **Color for**                   | **State/Meaning**            | **CSS Selector(s)**                                                                      |
+| ----------------------------------------------------------- | ------------------------------- | ---------------------------- | ---------------------------------------------------------------------------------------- |
+| **--par-color-text-datepicker-days-today-neutral-enabled**  | Day text (today, neutral)       | Today, enabled (neutral)     | `.flatpickr-day.today.flatpickr-calendar-neutral`                                        |
+| **--par-color-text-datepicker-days-today-neutral-hovered**  | Day text (today, neutral)       | Today, hovered (neutral)     | `.flatpickr-day.today.flatpickr-calendar-neutral:hover`                                  |
+| **--par-color-text-datepicker-days-today-neutral-active**   | Day text (today, neutral)       | Today, active (neutral)      | `.flatpickr-day.today.flatpickr-calendar-neutral:active`                                 |
+| **--par-color-text-datepicker-days-today-accent-enabled**   | Day text (today, accent)        | Today, enabled (accent)      | `.flatpickr-day.today.flatpickr-calendar-accent`                                         |
+| **--par-color-text-datepicker-days-today-accent-hovered**   | Day text (today, accent)        | Today, hovered (accent)      | `.flatpickr-day.today.flatpickr-calendar-accent:hover`                                   |
+| **--par-color-text-datepicker-days-today-accent-active**    | Day text (today, accent)        | Today, active (accent)       | `.flatpickr-day.today.flatpickr-calendar-accent:active`                                  |
+| **--par-color-text-datepicker-days-normal-enabled**         | Day text (normal)               | Normal, enabled              | `.flatpickr-day`                                                                         |
+| **--par-color-text-datepicker-days-normal-neutral-hovered** | Day text (normal, neutral)      | Normal, hovered (neutral)    | `.flatpickr-day.flatpickr-calendar-neutral:hover`                                        |
+| **--par-color-text-datepicker-days-normal-accent-hovered**  | Day text (normal, accent)       | Normal, hovered (accent)     | `.flatpickr-day.flatpickr-calendar-accent:hover`                                         |
+| **--par-color-text-datepicker-days-normal-neutral-active**  | Day text (normal, neutral)      | Normal, active (neutral)     | `.flatpickr-day.flatpickr-calendar-neutral:active`                                       |
+| **--par-color-text-datepicker-days-normal-accent-active**   | Day text (normal, accent)       | Normal, active (accent)      | `.flatpickr-day.flatpickr-calendar-accent:active`                                        |
+| **--par-color-text-datepicker-days-normal-disabled**        | Day text (normal)               | Disabled                     | `.flatpickr-day.flatpickr-disabled, .flatpickr-day:disabled`                             |
+| **--par-color-text-datepicker-days-normal-drag-neutral**    | Day text (drag, neutral)        | Drag selection (neutral)     | `.flatpickr-day.drag.flatpickr-calendar-neutral`                                         |
+| **--par-color-text-datepicker-days-normal-drag-accent**     | Day text (drag, accent)         | Drag selection (accent)      | `.flatpickr-day.drag.flatpickr-calendar-accent`                                          |
+| **--par-color-text-datepicker-days-today-drag-neutral**     | Day text (today, drag, neutral) | Today, drag (neutral)        | `.flatpickr-day.today.drag.flatpickr-calendar-neutral`                                   |
+| **--par-color-text-datepicker-days-today-drag-accent**      | Day text (today, drag, accent)  | Today, drag (accent)         | `.flatpickr-day.today.drag.flatpickr-calendar-accent`                                    |
+| **--par-color-text-datepicker-time**                        | Time text                       | Time picker text             | `.flatpickr-time`                                                                        |
+| **--par-color-text-datepicker-caret-enabled**               | Caret icon                      | Caret enabled                | `.numInputWrapper .arrowUp:after, .numInputWrapper .arrowDown:after`                     |
+| **--par-color-text-datepicker-caret-hovered**               | Caret icon                      | Caret hovered                | `.numInputWrapper .arrowUp:hover:after, .numInputWrapper .arrowDown:hover:after`         |
+| **--par-color-text-datepicker-caret-disabled**              | Caret icon                      | Caret disabled               | `.numInputWrapper[disabled] .arrowUp:after, .numInputWrapper[disabled] .arrowDown:after` |
+| **--par-color-bg-datepicker-days-neutral-enabled**          | Day background (neutral)        | Enabled                      | `.flatpickr-day.flatpickr-calendar-neutral`                                              |
+| **--par-color-bg-datepicker-days-neutral-hovered**          | Day background (neutral)        | Hovered                      | `.flatpickr-day.flatpickr-calendar-neutral:hover`                                        |
+| **--par-color-bg-datepicker-days-neutral-active**           | Day background (neutral)        | Active                       | `.flatpickr-day.flatpickr-calendar-neutral:active`                                       |
+| **--par-color-bg-datepicker-days-neutral-disabled**         | Day background (neutral)        | Disabled                     | `.flatpickr-day.flatpickr-calendar-neutral:disabled`                                     |
+| **--par-color-bg-datepicker-days-accent-enabled**           | Day background (accent)         | Enabled                      | `.flatpickr-day.flatpickr-calendar-accent`                                               |
+| **--par-color-bg-datepicker-days-accent-hovered**           | Day background (accent)         | Hovered                      | `.flatpickr-day.flatpickr-calendar-accent:hover`                                         |
+| **--par-color-bg-datepicker-days-accent-active**            | Day background (accent)         | Active                       | `.flatpickr-day.flatpickr-calendar-accent:active`                                        |
+| **--par-color-bg-datepicker-days-accent-disabled**          | Day background (accent)         | Disabled                     | `.flatpickr-day.flatpickr-calendar-accent:disabled`                                      |
+| **--par-color-bg-datepicker-days-drag-neutral**             | Day background (drag, neutral)  | Drag selection (neutral)     | `.flatpickr-day.drag.flatpickr-calendar-neutral`                                         |
+| **--par-color-bg-datepicker-days-drag-accent**              | Day background (drag, accent)   | Drag selection (accent)      | `.flatpickr-day.drag.flatpickr-calendar-accent`                                          |
+| **--par-color-bg-datepicker-month-select-dropdown-enabled** | Month select dropdown           | Enabled                      | `.flatpickr-current-month .flatpickr-monthDropdown-months`                               |
+| **--par-color-bg-datepicker-month-select-dropdown-hovered** | Month select dropdown           | Hovered                      | `.flatpickr-current-month .flatpickr-monthDropdown-months:hover`                         |
+| **--par-color-bg-datepicker**                               | DatePicker background           | Main background              | `.date-picker`                                                                           |
+| **--par-color-border-datepicker**                           | DatePicker border               | Main border                  | `.date-picker`                                                                           |
+| **--par-color-border-datepicker-month-select-list**         | Month select list border        | Border for month select list | `.flatpickr-current-month .flatpickr-monthDropdown-month`                                |
 
 ---
 
@@ -197,26 +197,24 @@ import TableOfContents from '@components/doc/TableOfContents';
 
 ### `<DatePicker />`
 
-| Prop              | Type                                               | Default   | Description                                  |
-| ----------------- | -------------------------------------------------- | --------- | -------------------------------------------- |
-| floatingLabel     | ReactNode                                          |           | Floating label inside the input              |
-| wrapperProps      | object                                             |           | Props for input container                    |
-| color             | 'neutral' \| 'accent'                              | 'neutral' | Theme color                                  |
-| icon              | ReactNode                                          |           | Icon inside the input                        |
-| sideIcon          | 'left' \| 'right'                                  | 'right'   | Position of secondary icon                   |
-| locale            | string                                             | 'default' | Locale for the DatePicker                    |
-| calenderHeader    | ReactNode                                          |           | Custom component at top of calendar          |
-| options           | object                                             |           | Flatpickr options (see Flatpickr docs)       |
-| onFocus           | function (event)                                   |           | Callback on input focus                      |
-| onBlur            | function (event)                                   |           | Callback on input blur                       |
-| onInputChange     | function (event, flatPickrInstance)                |           | Callback on input change (allowInput = true) |
-| isError           | boolean                                            | false     | Error state                                  |
-| errorMessage      | string                                             |           | Error message                                |
-| theme             | string                                             | 'default' | Theme                                        |
-| inputSize         | 'sm' \| 'md'                                       | 'md'      | Input size                                   |
-| ...InputProps     | [See Input](../BaseInput)                          |           | Inherits all props from Input                |
-| ...FlatpickrProps | [See Flatpickr](https://flatpickr.js.org/options/) |           | Inherits all Flatpickr options               |
+| **Prop**              | **Type**                                           | **Default** | **Description**                              |
+| --------------------- | -------------------------------------------------- | ----------- | -------------------------------------------- |
+| **floatingLabel**     | ReactNode                                          |             | Floating label inside the input              |
+| **wrapperProps**      | object                                             |             | Props for input container                    |
+| **color**             | 'neutral' \| 'accent'                              | _'neutral'_ | Theme color                                  |
+| **icon**              | ReactNode                                          |             | Icon inside the input                        |
+| **sideIcon**          | 'left' \| 'right'                                  | _'right'_   | Position of secondary icon                   |
+| **locale**            | string                                             | _'default'_ | Locale for the DatePicker                    |
+| **calenderHeader**    | ReactNode                                          |             | Custom component at top of calendar          |
+| **options**           | object                                             |             | Flatpickr options (see Flatpickr docs)       |
+| **onFocus**           | function (event)                                   |             | Callback on input focus                      |
+| **onBlur**            | function (event)                                   |             | Callback on input blur                       |
+| **onInputChange**     | function (event, flatPickrInstance)                |             | Callback on input change (allowInput = true) |
+| **isError**           | boolean                                            | _false_     | Error state                                  |
+| **errorMessage**      | string                                             |             | Error message                                |
+| **theme**             | string                                             | _'default'_ | Theme                                        |
+| **inputSize**         | 'sm' \| 'md'                                       | _'md'_      | Input size                                   |
+| **...InputProps**     | [See Input](../BaseInput)                          |             | Inherits all props from Input                |
+| **...FlatpickrProps** | [See Flatpickr](https://flatpickr.js.org/options/) |             | Inherits all Flatpickr options               |
 
 > _Note:_ _DatePicker_ inherits all props from Input and Flatpickr. See [Input documentation](../BaseInput) and [Flatpickr options](https://flatpickr.js.org/options/) for full details.
-
----
