--- a/app/inline-link/@dev/page.mdx
+++ b/app/inline-link/@dev/page.mdx
@@ -24,16 +24,16 @@ import TableOfContents from '@components/doc/TableOfContents';
 
 ## Design Tokens for InlineLink
 
-| Token                               | Color for     | State/Meaning | CSS Selector(s)                |
-| ----------------------------------- | ------------- | ------------- | ------------------------------ |
-| --color-text-link-standard-enabled  | Standard link | Enabled       | .inline-link.standard          |
-| --color-text-link-standard-hovered  | Standard link | Hovered       | .inline-link.standard:hover    |
-| --color-text-link-standard-focused  | Standard link | Focused       | .inline-link.standard:focus    |
-| --color-text-link-standard-disabled | Standard link | Disabled      | .inline-link.standard.disabled |
-| --color-text-link-neutral-enabled   | Neutral link  | Enabled       | .inline-link.neutral           |
-| --color-text-link-neutral-hovered   | Neutral link  | Hovered       | .inline-link.neutral:hover     |
-| --color-text-link-neutral-focused   | Neutral link  | Focused       | .inline-link.neutral:focus     |
-| --color-text-link-neutral-disabled  | Neutral link  | Disabled      | .inline-link.neutral.disabled  |
+| **Token**                               | **Color for** | **State/Meaning** | **CSS Selector(s)**              |
+| --------------------------------------- | ------------- | ----------------- | -------------------------------- |
+| **--color-text-link-standard-enabled**  | Standard link | Enabled           | `.inline-link.standard`          |
+| **--color-text-link-standard-hovered**  | Standard link | Hovered           | `.inline-link.standard:hover`    |
+| **--color-text-link-standard-focused**  | Standard link | Focused           | `.inline-link.standard:focus`    |
+| **--color-text-link-standard-disabled** | Standard link | Disabled          | `.inline-link.standard.disabled` |
+| **--color-text-link-neutral-enabled**   | Neutral link  | Enabled           | `.inline-link.neutral`           |
+| **--color-text-link-neutral-hovered**   | Neutral link  | Hovered           | `.inline-link.neutral:hover`     |
+| **--color-text-link-neutral-focused**   | Neutral link  | Focused           | `.inline-link.neutral:focus`     |
+| **--color-text-link-neutral-disabled**  | Neutral link  | Disabled          | `.inline-link.neutral.disabled`  |
 
 ---
 
@@ -45,17 +45,17 @@ _InlineLink may also inherit some tokens from Button or Text components for typo
 
 ### `<InlineLink />`
 
-| Prop      | Type                    | Default | Description                                     |
-| --------- | ----------------------- | ------- | ----------------------------------------------- |
-| href      | string                  |         | Link URL                                        |
-| target    | string                  |         | Target attribute (\_blank, \_self, etc.)        |
-| size      | 'sm' \| 'md' \| 'lg'    | 'md'    | Link size                                       |
-| color     | string                  |         | Link color                                      |
-| disabled  | boolean                 | false   | Disable the link                                |
-| underline | boolean                 | true    | Show underline                                  |
-| icon      | ReactNode               |         | Icon before/after text                          |
-| iconOnly  | boolean                 | false   | Icon only, no text                              |
-| ...aProps | HTMLAnchorElement props |         | All native anchor props (className, style, ...) |
+| **Prop**      | **Type**                | **Default** | **Description**                                 |
+| ------------- | ----------------------- | ----------- | ----------------------------------------------- |
+| **href**      | string                  |             | Link URL                                        |
+| **target**    | string                  |             | Target attribute (\_blank, \_self, etc.)        |
+| **size**      | 'sm' \| 'md' \| 'lg'    | _'md'_      | Link size                                       |
+| **color**     | string                  |             | Link color                                      |
+| **disabled**  | boolean                 | _false_     | Disable the link                                |
+| **underline** | boolean                 | _true_      | Show underline                                  |
+| **icon**      | ReactNode               |             | Icon before/after text                          |
+| **iconOnly**  | boolean                 | _false_     | Icon only, no text                              |
+| **...aProps** | HTMLAnchorElement props |             | All native anchor props (className, style, ...) |
 
 > _Note:_ _InlineLink_ inherits all native props from HTMLAnchorElement.
 
