--- a/app/spinner/@dev/page.mdx
+++ b/app/spinner/@dev/page.mdx
@@ -28,13 +28,11 @@ import TableOfContents from '@components/doc/TableOfContents';
 
 ## Design Tokens for Spinner
 
-| **Token**                                        | **Color for**      | **State/Meaning** | **CSS Selector(s)** |
-| ------------------------------------------------ | ------------------ | ----------------- | ------------------- |
-| `--par-color-stroke-spinner-interactive-neutral` | Spinner arc        | Neutral           | `.spinner.neutral`  |
-| `--par-color-stroke-spinner-interactive-accent`  | Spinner arc        | Accent            | `.spinner.accent`   |
-| `--par-color-stroke-spinner-inactive`            | Spinner background | Inactive          | `.spinner`          |
-
-> _Note: Spinner uses its own tokens defined in `variables.css` and does not use Progress/Icon tokens._
+| **Token**                                          | **Color for**      | **State/Meaning** | **CSS Selector(s)** |
+| -------------------------------------------------- | ------------------ | ----------------- | ------------------- |
+| **--par-color-stroke-spinner-interactive-neutral** | Spinner arc        | Neutral           | `.spinner.neutral`  |
+| **--par-color-stroke-spinner-interactive-accent**  | Spinner arc        | Accent            | `.spinner.accent`   |
+| **--par-color-stroke-spinner-inactive**            | Spinner background | Inactive          | `.spinner`          |
 
 ---
 
@@ -42,11 +40,11 @@ import TableOfContents from '@components/doc/TableOfContents';
 
 ### `<Spinner />`
 
-| **Prop**         | **Type**                                | **Default** | **Description**                               |
-| ---------------- | --------------------------------------- | ----------- | --------------------------------------------- |
-| **variant**      | 'circular' \| 'dotted' \| 'sunburst'    | 'circular'  | Spinner style variant                         |
-| **color**        | 'neutral' \| 'accent'                   | 'neutral'   | Spinner color                                 |
-| **size**         | 'sm' \| 'md' \| 'lg' \| 'xl'            | 'md'        | Spinner size                                  |
-| **...spanProps** | `React.HTMLAttributes<HTMLSpanElement>` |             | All native span props (className, style, ...) |
+| **Prop**         | **Type**                                | **Default**  | **Description**                               |
+| ---------------- | --------------------------------------- | ------------ | --------------------------------------------- |
+| **variant**      | 'circular' \| 'dotted' \| 'sunburst'    | _'circular'_ | Spinner style variant                         |
+| **color**        | 'neutral' \| 'accent'                   | _'neutral'_  | Spinner color                                 |
+| **size**         | 'sm' \| 'md' \| 'lg' \| 'xl'            | _'md'_       | Spinner size                                  |
+| **...spanProps** | `React.HTMLAttributes<HTMLSpanElement>` |              | All native span props (className, style, ...) |
 
 > **_Note:_** _Spinner_ **inherits** all native props from `HTMLSpanElement`.
