--- a/app/tabs/@dev/page.mdx
+++ b/app/tabs/@dev/page.mdx
@@ -31,19 +31,19 @@ import TableOfContents from '@components/doc/TableOfContents';
 
 ## Design Tokens for Tabs
 
-| **Token**                                  | **Color for**  | **State/Meaning**         | **CSS Selector(s)**    |
-| ------------------------------------------ | -------------- | ------------------------- | ---------------------- |
-| `--par-color-bg-tab-item-enabled`          | Tab background | Default/Enabled           | `.tab-button`          |
-| `--par-color-bg-tab-item-hovered`          | Tab background | Hovered                   | `.tab-button:hover`    |
-| `--par-color-bg-tab-item-neutral-active`   | Tab background | Active/Selected (neutral) | `.tab-button.active`   |
-| `--par-color-bg-tab-item-accent-active`    | Tab background | Active/Selected (accent)  | `.tab-button.active`   |
-| `--par-color-bg-tab-item-disabled`         | Tab background | Disabled                  | `.tab-button:disabled` |
-| `--par-color-border-tab-container`         | Tabs border    | Any                       | `.tabs-nav-wrapper`    |
-| `--par-color-text-tab-item-enabled`        | Tab text       | Default/Enabled           | `.tab-button`          |
-| `--par-color-text-tab-item-hovered`        | Tab text       | Hovered                   | `.tab-button:hover`    |
-| `--par-color-text-tab-item-neutral-active` | Tab text       | Active/Selected (neutral) | `.tab-button.active`   |
-| `--par-color-text-tab-item-accent-active`  | Tab text       | Active/Selected (accent)  | `.tab-button.active`   |
-| `--par-color-text-tab-item-disabled`       | Tab text       | Disabled                  | `.tab-button:disabled` |
+| **Token**                                      | **Color for**  | **State/Meaning**         | **CSS Selector(s)**    |
+| ---------------------------------------------- | -------------- | ------------------------- | ---------------------- |
+| **`--par-color-bg-tab-item-enabled`**          | Tab background | Default/Enabled           | `.tab-button`          |
+| **`--par-color-bg-tab-item-hovered`**          | Tab background | Hovered                   | `.tab-button:hover`    |
+| **`--par-color-bg-tab-item-neutral-active`**   | Tab background | Active/Selected (neutral) | `.tab-button.active`   |
+| **`--par-color-bg-tab-item-accent-active`**    | Tab background | Active/Selected (accent)  | `.tab-button.active`   |
+| **`--par-color-bg-tab-item-disabled`**         | Tab background | Disabled                  | `.tab-button:disabled` |
+| **`--par-color-border-tab-container`**         | Tabs border    | Any                       | `.tabs-nav-wrapper`    |
+| **`--par-color-text-tab-item-enabled`**        | Tab text       | Default/Enabled           | `.tab-button`          |
+| **`--par-color-text-tab-item-hovered`**        | Tab text       | Hovered                   | `.tab-button:hover`    |
+| **`--par-color-text-tab-item-neutral-active`** | Tab text       | Active/Selected (neutral) | `.tab-button.active`   |
+| **`--par-color-text-tab-item-accent-active`**  | Tab text       | Active/Selected (accent)  | `.tab-button.active`   |
+| **`--par-color-text-tab-item-disabled`**       | Tab text       | Disabled                  | `.tab-button:disabled` |
 
 > _Note: Tabs uses the same design tokens as the Button or Navigation component. See Button/Navigation documentation for available tokens._
 
